<resources>
    <!-- Title -->
    <string name="app_name">DayTripper</string>
    <string name="reportTitle">DayTripper Report</string>
    <string name="newDayTripTitle">Create DayTrip</string>
    <string name="title_activity_map">Map</string>

    <!-- Forms -->
    <string name="button_addDayTrip">Add Day Trip</string>
    <string name="hint_DayTripTitle">Trip Name</string>
    <string name="hint_DayTripDescription">Trip Description </string>
    <string name="save_daytrip"> Save Day Trip </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_daytrip_image">Select DayTrip image</string>
    <string name="change_trip_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="image_description">DayTipper Image</string>


    <string name="region">County</string>
    <string name="target">Target Group</string>

    <!--Spinner-->
    <string-array name="regions">
        <item>County</item>
        <item>Antrim</item>
        <item>Armagh</item>
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Fermanagh</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Tyrone</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>
    <string-array name="target">
        <item>Target Group</item>
        <item>Couples</item>
        <item>Elderly</item>
        <item>Families</item>
        <item>Large Groups</item>
        <item>Singletons</item>
        <item>Teens</item>
        <item>Young Kids</item>
    </string-array>


    <!-- Menu -->
    <string name="menu_addDayTrip">Add Trip</string>
    <string name="menu_cancelDayTrip">Cancel</string>
    <string name="menu_deleteDayTrip">Delete</string>
    <string name="menu_deleteTrips">Delete Menu</string>
    <string name="menu_deleteAll">Delete All Trips</string>
    <string name="action_create">Add Trip</string>
    <string name="action_report">Trip Report</string>
    <string name="action_about">About DayTripper</string>

    <!-- Toast/notice -->
    <string name="enter_daytrip_title"> Please enter a Day Trip Name </string>
    <string name="enter_daytrip_description"> Please enter a Day Trip Description </string>
    <string name="enter_daytrip_rating"> Please enter a Day Trip Rating </string>
    <string name="enter_daytrip_region"> Please select a county </string>
    <string name="enter_daytrip_target"> Please select a target group </string>

    <string name="success_message"> Day Trip successfully added </string>
    <string name="delete_message"> Day Trip successfully deleted </string>
    <string name="dayTripsNotFound">No Day Trips found...\nStart exploring!</string>
    <string name="dayTripError">Error : Couldn\'t Create a Day Trip...</string>

    <string name="messageLoading">Please Wait while the DayTrips are Loading...</string>

    <!-- Navigation -->
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">DayTripper</string>
    <string name="nav_header_subtitle">visitor@daytripper.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--MenuTags-->
    <string name="titleCondensed_report">report</string>
    <string name="titleCondensed_createtrip">create_trip</string>
    <string name="titleCondensed_deleteall">delete_all</string>

    <!--Day Trip Detail-->
    <string name="dayTripDetails">DayTrip Details</string>
    <string name="tripTitle">Title :</string>
    <string name="tripDescription">Description :</string>
    <string name="tripRating">Rating: </string>
    <string name="tripLat">Lat: </string>
    <string name="tripLng">Lng :</string>
    <string name="tripCreated">Created/Modified :</string>
    <string name="tripTarget">Target :</string>
    <string name="tripRegion">Region :</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!--Aboutus -->
    <string name="aboutus_title">DayTripper</string>
    <string name="aboutus_message">Travel and place of interest mobile application\n\nAs you can see, there aren\'t many daytrips added yet\n\n Please contribute, start exploring :)!!</string>



    <!-- Firebase Resources-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

</resources>