<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/dayTripFragment"
        android:name="org.wit.daytripper.ui.daytrip.DayTripFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_daytrip">
        <action
            android:id="@+id/action_dayTripFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="org.wit.daytripper.ui.report.ReportFragment"
        android:label="@string/reportTitle"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_dayTripFragment"
            app:destination="@id/dayTripFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_reportFragment_to_dayTripDetailFragment"
            app:destination="@id/dayTripDetailFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.wit.daytripper.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/dayTripDetailFragment"
        android:name="org.wit.daytripper.ui.detail.DayTripDetailFragment"
        android:label="day_trip_detail_fragment"
        tools:layout="@layout/day_trip_detail_fragment" >
        <action
            android:id="@+id/action_dayTripDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <argument
            android:name="dayTripId"
            app:argType="string" />
    </fragment>

</navigation>