<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.daytrip.DayTripFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/daytripImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/explorer_create"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="8dp"
                    android:alpha="0.25"
                    android:contentDescription="string/image_description"/>

                <EditText
                    android:id="@+id/dayTripTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_DayTripTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_DayTripDescription"
                    android:inputType="textMultiLine"
                    android:maxLength="150"
                    android:maxLines="4"
                    android:padding="8dp"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp"
                    android:lines="5"
                    android:minLines="2"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:theme="@style/RatingBar"
                    android:textColor="@color/black"
                    android:numStars="5"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/transparent"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Spinner
                        android:id="@+id/spregion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/regions"
                        android:layout_marginLeft="25dp"
                        android:backgroundTint="@color/color_primary"
                        />
                    <Spinner
                        android:id="@+id/sptarget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/target"
                        android:layout_marginRight="25dp"
                        android:backgroundTint="@color/color_primary"
                        />

                </LinearLayout>



                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/color_secondary"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/button_addDayTrip"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>